--- a/#src/scss/main.scss
+++ b/#src/scss/main.scss
@@ -214,3 +214,4 @@ body {
 
 @import './components/mini-cart/mini-cart';
 @import './components/notification/modal';
+@import './components/notification/notifications';
