--- a/#src/templates/theme/components/map.html
+++ b/#src/templates/theme/components/map.html
@@ -1,4 +1,4 @@
-<section class="index-map" style="display: none">
+<section class="index-map">
   <div class="index-map__container">
     <div class="index-map__inner">
       <iframe
