--- a/#src/templates/theme/pages/service/service_grav.html
+++ b/#src/templates/theme/pages/service/service_grav.html
@@ -28,8 +28,8 @@
             это не только передача информации, но и способ выразить характер усопшего. Предлагаем свои услуги по изготовлению надписей и нанесению изображений.
           </p>
           <div class="hero__buttons">
-            <button type="button" class="hero__button hero__button--blue" data-popup="order-service" data-order="Гравировка">Заказать услугу</button>
-            <button type="button" class="hero__button hero__button--small">?</button>
+            <button type="button" class="hero__button hero__button--blue" data-popup="order-service" data-order="Гравиasdsadровка">Заказать услугу</button>
+            <button type="button" class="hero__button hero__button--small" data-popup="consultation-form" data-order="11Гравировка">?</button>
           </div>
         </div>
       </div>
@@ -76,7 +76,7 @@
                   <li>возможность работы на кладбище без демонтажа памятника. Отлично подходит для нанесения новый и корректировки старых надписей</li>
                 </ul>
               </div>
-              <button class="service-content__btn _btn">Получить консультацию</button>
+              <button type="button" class="service-content__btn _btn" data-popup="consultation-form" data-order="Гравировка">Получить консультацию</button>
             </div>
           </div>
         </div>
@@ -99,7 +99,7 @@
                   прокрасить их в любой цвет.
                 </p>
               </div>
-              <button class="service-content__btn _btn">Заказать гравировку</button>
+              <button type="button" class="service-content__btn _btn" data-popup="order-service" data-order="Гравировка">Заказать гравировку</button>
             </div>
           </div>
         </div>
