--- a/#src/templates/theme/components/header.html
+++ b/#src/templates/theme/components/header.html
@@ -20,12 +20,12 @@
             <img src="{% static 'theme/mb/images/icon/chevron-down_white.svg' %}" alt="" />
           </li>
           <li class="nav__item">
-            <a href="#">Услуги</a>
+            <a href="{% url 'service' %}">Услуги</a>
             <!-- <img src="{% static 'theme/mb/images/icon/chevron-down_white.svg' %}" alt="" /> -->
           </li>
           <li class="nav__item"><a href="{% url 'service_grav' %}">Гравировка</a></li>
           <li class="nav__item"><a href="{% url 'service_new' %}">Установка</a></li>
-          <li class="nav__item"><a href="#">Оплата</a></li>
+          <li class="nav__item"><a href="{% url 'delivery' %}">Оплата</a></li>
           <li class="nav__item"><a href="{% url 'gallery' %}">Наши работы</a></li>
           <li class="nav__item"><a href="{% url 'about' %}">О нас</a></li>
           <li class="nav__item"><a href="{% url 'contact' %}">Контакты</a></li>
