--- a/#src/templates/theme/components/popup.html
+++ b/#src/templates/theme/components/popup.html
@@ -28,7 +28,6 @@
         {% csrf_token %}
         <input type="text" name="name" class="popup__form-controls" placeholder="Ваше имя" required />
         <input type="text" name="phone" class="popup__form-controls" placeholder="номер телефона" data-tel-input required />
-        <input type="text" name="captcha_0" class="popup__form-controls" />
         <button type="submit" class="popup__form-submit">Отправить</button>
       </form>
     </div>
@@ -43,27 +42,24 @@
         <img src="{% static 'theme/mb/images/loading.gif' %}" alt="" />
       </div>
       <h2 class="popup__title">Оставить отзыв</h2>
-      <form action="{% url 'reviews_form' %}" class="popup__form" method="POST" id="callback-form">
+      <form action="{% url 'reviews_form' %}" class="popup__form" method="POST" id="reviews-form">
         {% csrf_token %}
         <input type="text" name="name" class="popup__form-controls" placeholder="Ваше имя" required />
         <input type="text" name="phone" class="popup__form-controls" placeholder="номер телефона" data-tel-input />
-        <textarea name="message" rows="10" class="popup__form-controls" placeholder="" /></textarea>
+        <textarea name="message" rows="10" class="popup__form-controls" placeholder="Ваш отзыв" /></textarea>
         <button type="submit" class="popup__form-submit">Отправить</button>
       </form>
     </div>
   </div>
 </div>
 
-<div id="success" aria-hidden="true" class="popup">
-  <div class="popup__wrapper">
-    <div class="popup__content">
-      <button data-close type="button" class="popup__close"></button>
-      <div class="popup__success-image">
+<div id="success" class="notification">
+    <div class="notification__content">
+      <div class="notification__success-image">
         <img src="{% static 'theme/mb/images/tick.png' %}" alt="Обратный звонок" title="Обратный звонок" />
       </div>
-      <p class="popup__success-text">Сообщение успешно отправлено</p>
+      <p class="notification__success-text">Успешно</p>
     </div>
-  </div>
 </div>
 
 <div id="order-service" aria-hidden="true" class="popup">
@@ -74,18 +70,18 @@
         <img src="{% static 'theme/mb/images/loading.gif' %}" alt="" />
       </div>
       <h2 class="popup__title">Заказать услугу</h2>
-      <form action="{% url 'reviews_form' %}" class="popup__form" method="POST" id="callback-form">
+      <form action="{% url 'service_form' %}" class="popup__form" method="POST" id="order-service-form">
         {% csrf_token %}
         <input type="text" name="name" class="popup__form-controls" placeholder="Ваше имя" required />
         <input type="text" name="phone" class="popup__form-controls" placeholder="номер телефона" data-tel-input required />
-        <input type="hidden" name="pagename" class="popup__form-controls" required />
+        <input type="hidden" name="service" class="popup__form-controls" required />
         <button type="submit" class="popup__form-submit">Отправить</button>
       </form>
     </div>
   </div>
 </div>
 
-<div id="consultation" aria-hidden="true" class="popup">
+<div id="consultation-form" aria-hidden="true" class="popup">
   <div class="popup__wrapper">
     <div class="popup__content">
       <button data-close type="button" class="popup__close"></button>
@@ -93,7 +89,7 @@
         <img src="{% static 'theme/mb/images/loading.gif' %}" alt="" />
       </div>
       <h2 class="popup__title">Заказать консультацию</h2>
-      <form action="{% url 'reviews_form' %}" class="popup__form" method="POST" id="callback-form">
+      <form action="{% url 'consultation' %}" class="popup__form" method="POST" id="consultation">
         {% csrf_token %}
         <input type="text" name="name" class="popup__form-controls" placeholder="Ваше имя" required />
         <input type="text" name="phone" class="popup__form-controls" placeholder="номер телефона" data-tel-input required />
