--- a/#src/templates/theme/pages/contact.html
+++ b/#src/templates/theme/pages/contact.html
@@ -60,7 +60,7 @@
 						<img src="{% static 'theme/mb/images/icon/location.svg' %}" alt="Иконка телефона" title="Иконка телефона">
 						<div class="item-contact__row-info">
 							<p class="item-contact__row-big">Email</p>
-							<p class="item-contact__row-small">akropol@mail.ru</p>
+							<p class="item-contact__row-small">{{ site_settings.email }}</p>
 						</div>
 					</div>
 				</div>
@@ -99,80 +99,7 @@
 			</div>
 		</div>
 	</div>
-	<section class="index-contact">
-		<div class="index-contact__container">
-			<div class="index-contact__grid">
-				<div class="index-contact__item">
-					<h2 class="index-contact__title">Мы готовы ответить на все <span>ваши вопросы</span></h2>
-					<ul class="index-contact__list">
-						<li>
-							<img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
-							<p class="index-contact__list-text"><span>Проконсультируем</span> по материалу памятника</p>
-						</li>
-						<li>
-							<img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
-							<p class="index-contact__list-text"><span>Поможем определиться </span>с типом памятника и заказать его
-								производство</p>
-						</li>
-						<li>
-							<img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
-							<p class="index-contact__list-text"><span>Расскажем все</span> про доставку и установку</p>
-						</li>
-					</ul>
-				</div>
-				<div class="index-contact__item">
-					<div class="index-contact__mobile" style="background-image: url('{% static 'theme/mb/images/mobile.png' %}')">
-						<div class="index-contact__logo">
-							<img src="{% static 'theme/mb/images/logo-black.png' %}" alt="" />
-						</div>
-						<p class="index-contact__mobile-text">
-							Свяжитесь с нами! <br />
-							Мы обязательно поможем!
-						</p>
-						<div class="index-contact__mobile-phones">
-							<a href="">+7(3822)-210-915<img src="{% static 'theme/mb/images/icon/phone-black.svg' %}" alt="" /></a>
-							<a href="">+7-900-921-09-15<img src="{% static 'theme/mb/images/icon/phone-mobile.svg' %}" alt="" /></a>
-						</div>
-						<a href="" class="index-contact__call _btn">Позвонить</a>
-					</div>
-				</div>
-				<div class="index-contact__item">
-					<form action="" method="POST" class="form index-contact__form">
-						<h3 class="form__title">Заполните форму</h3>
-						<p class="form__text">Оставьте заявку - мы обязательно с вами свяжемся</p>
-						<div class="form__inner">
-							<input type="text" name="name" id="id_name" class="form__controls" placeholder="Ваше имя" />
-							<input type="tel" name="phone" id="id_phone" class="form__controls" placeholder="Номер телефона" />
-							<div class="form__social-inner">
-								<label for="tg" class="form__controls-label">
-									<input type="checkbox" id="tg" name="social" />
-									<img src="{% static 'theme/mb/images/icon/tg.svg' %}" alt="" />
-								</label>
-								<label for="vk" class="form__controls-label">
-									<input type="checkbox" id="vk" name="social" />
-									<img src="{% static 'theme/mb/images/icon/vk.svg' %}" alt="" />
-								</label>
-								<label for="wh" class="form__controls-label">
-									<input type="checkbox" id="wh" name="social" />
-									<img src="{% static 'theme/mb/images/icon/wh.svg' %}" alt="" />
-								</label>
-							</div>
-							<div class="form__bottom">
-								<button type="submit" class="form__submit _btn">Отправить</button>
-								<div class="form__agreement">
-									<input type="checkbox" name="agrement" id="id_agrement" checked />
-									<label for="id_agreement" class="form__label">
-										Я даю свое согласие на обработку персональных данных и соглашаюсь с <a href="">политикой
-											конфиденциальности</a>
-									</label>
-								</div>
-							</div>
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</section>
+	{% include "../includes/contact-block.html" %}
 </main>
 
 </body>
