--- a/main/core/theme/mb/templates/components/header-single.html
+++ b/main/core/theme/mb/templates/components/header-single.html
@@ -73,7 +73,7 @@
           </li>
           <li class="nav__item"><a href="{% url 'service_grav' %}">Гравировка</a></li>
           <li class="nav__item"><a href="{% url 'service_new' %}">Установка</a></li>
-          <li class="nav__item"><a href="#">Оплата</a></li>
+          <li class="nav__item"><a href="{% url 'delivery' %}">Оплата</a></li>
           <li class="nav__item"><a href="{% url 'gallery' %}">Наши работы</a></li>
           <li class="nav__item"><a href="{% url 'about' %}">О нас</a></li>
           <li class="nav__item"><a href="{% url 'contact' %}">Контакты</a></li>
