--- a/main/core/theme/mb/templates/pages/index.html
+++ b/main/core/theme/mb/templates/pages/index.html
@@ -104,6 +104,7 @@
     </div>
   </section>
 
+  {% comment %}
   <section class="index-service">
     <div class="index-service__container">
       <h2 class="_title index-service__title">Оказываемые виды услуг</h2>
@@ -132,6 +133,7 @@
       </div>
     </div>
   </section>
+  {% endcomment %}
 
   <section class="index-work">
     <div class="index-work__container">
