--- a/main/core/theme/mb/templates/pages/service/service-test.html
+++ b/main/core/theme/mb/templates/pages/service/service-test.html
@@ -28,8 +28,10 @@
             соблюдения определённых правил и технологий.
           </p>
           <div class="hero__buttons">
-            <button type="button" class="hero__button hero__button--blue">Заказать услугу</button>
-            <button type="button" class="hero__button hero__button--small">?</button>
+            <button type="button" class="hero__button hero__button--blue" data-popup="order-service"
+              data-order="Установка памятников">Заказать услугу</button>
+            <button type="button" class="hero__button hero__button--small" data-popup="consultation-form"
+              data-order="Установка памятников">?</button>
           </div>
         </div>
       </div>
@@ -118,7 +120,8 @@
                   надгробия.
                 </p>
               </div>
-              <button class="service-content__btn _btn">Получить консультацию</button>
+              <button class="service-content__btn _btn" data-popup="consultation-form"
+                data-order="Установка памятников">Получить консультацию</button>
             </div>
           </div>
         </div>
@@ -154,7 +157,8 @@
                   проблемы необходимо заказать установку памятника специалистам.
                 </p>
               </div>
-              <button class="service-content__btn _btn">Заказать установку памятника</button>
+              <button class="service-content__btn _btn" data-popup="order-service"
+                data-order="Установка памятников">Заказать установку памятника</button>
             </div>
           </div>
         </div>
