--- a/main/core/theme/mb/templates/pages/service/service_grav.html
+++ b/main/core/theme/mb/templates/pages/service/service_grav.html
@@ -28,8 +28,8 @@
             это не только передача информации, но и способ выразить характер усопшего. Предлагаем свои услуги по изготовлению надписей и нанесению изображений.
           </p>
           <div class="hero__buttons">
-            <button type="button" class="hero__button hero__button--blue" data-popup="order-service" data-order="Гравиasdsadровка">Заказать услугу</button>
-            <button type="button" class="hero__button hero__button--small" data-popup="consultation-form" data-order="11Гравировка">?</button>
+            <button type="button" class="hero__button hero__button--blue" data-popup="order-service" data-order="Гравировка">Заказать услугу</button>
+            <button type="button" class="hero__button hero__button--small" data-popup="consultation-form" data-order="Гравировка">?</button>
           </div>
         </div>
       </div>
