--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -1076,6 +1076,10 @@
     @media screen and (max-width: 768px) {
       font-size: 35px;
     }
+
+    @media screen and (max-width: 425px) {
+      font-size: 25px;
+    }
   }
 
   // .hero__subtitle
