--- a/main/core/theme/mb/templates/pages/service/service.html
+++ b/main/core/theme/mb/templates/pages/service/service.html
@@ -24,7 +24,7 @@
           привлекательного и ухоженного вида захоронения.</p>
         <div class="hero__buttons">
           <button type="button" class="hero__button hero__button--small"
-            data-popup="consultation">Проконсультироваться</button>
+            data-popup="consultation-form">Проконсультироваться</button>
         </div>
       </div>
     </div>
