--- a/#src/templates/theme/base.html
+++ b/#src/templates/theme/base.html
@@ -168,6 +168,15 @@
     new VenoBox({
       selector: ".product__slide-link",
     });
+
+    new VenoBox({
+      selector: ".gallery__image",
+    });
+
+    new VenoBox({
+      selector: ".index-work__item",
+    });
+
   </script>
   <script src="{% static 'theme/mb/js/index.js' %}"></script>
 </body>
