--- a/main/core/theme/mb/templates/pages/service/service.html
+++ b/main/core/theme/mb/templates/pages/service/service.html
@@ -42,7 +42,8 @@
             Установка памятника
           </p>
         </a>
-        <a href="" class="service-page__item" style="background-image: url({% static 'theme/mb/images/texture.jpg' %})">
+        <a href="{% url 'service_grav' %}" class="service-page__item"
+          style="background-image: url({% static 'theme/mb/images/texture.jpg' %})">
           <div class="service-page__icon">
             <img src="{% static 'theme/mb/images/serice-5.png' %}" alt="" />
           </div>
