--- a/#src/templates/theme/pages/about.html
+++ b/#src/templates/theme/pages/about.html
@@ -25,7 +25,9 @@
           России.
         </p>
         <div class="hero__buttons">
-          <button type="button" class="hero__button hero__button--blue">Оставить заявку</button>
+          <button type="button" class="hero__button hero__button--blue" data-popup="consultation-form"
+            data-order="По услугам">Получить
+            консультацию</button>
           <!-- <button type="button" class="hero__button hero__button--small">?</button> -->
         </div>
       </div>
@@ -91,7 +93,8 @@
               </p>
               <p><i>Сохраните достойную память о близких и любимых в граните - выбирайте компанию "Акрополь"!</i></p>
             </div>
-            <button class="service-content__btn _btn" data-service="Заказать памятник">Заказать памятник</button>
+            <button class="service-content__btn _btn" data-popup="order-service" data-order="Заказать памятник">Заказать
+              памятник</button>
           </div>
         </div>
       </div>
