--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -480,6 +480,7 @@
     font-weight: 600;
     width: 100%;
     height: 40px;
+    font-size: 13px;
     border-radius: 5px;
     display: flex;
     align-items: center;
