--- a/#src/scss/pages/contact/contact.scss
+++ b/#src/scss/pages/contact/contact.scss
@@ -34,7 +34,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 40%;
     gap: 20px;
-    margin-top: 60px;
+    margin: 60px 0px;
 
     @media screen and (max-width: 768px) {
       grid-template-columns: 1fr;
