--- a/#src/templates/theme/components/footer.html
+++ b/#src/templates/theme/components/footer.html
@@ -32,14 +32,13 @@
         <p class="footer__title">Контакты</p>
         <div class="footer__contact-inner">
           <div class="footer__contact-list">
-            <a href="tel:+73822210915">+7(3822) 210-915</a>
-            <a href="tel:+79009210915">+7-900-921-09-15</a>
+            <a href="tel:+79009210915">+7(900) 921-09-15</a>
+            <a href="tel:+79039554018">+7(903) 955-40-18</a>
             <button type="button">Обратный звонок</button>
           </div>
           <div class="footer__contact-list">
             <p class="footer__contact-city">г.Томск</p>
             <p class="footer__contact-address">Яковлева, 41а</p>
-            <p class="footer__contact-address">Ново-Трактовая улица, 15</p>
             <p class="footer__contact-address">Демьяна Бедного, 16а ст1</p>
           </div>
           <div class="footer__contact-list">
