--- a/#src/templates/theme/pages/contact.html
+++ b/#src/templates/theme/pages/contact.html
@@ -29,14 +29,14 @@
 						<img src="{% static 'theme/mb/images/icon/phone-blue.svg' %}" alt="Иконка телефона" title="Иконка телефона">
 						<div class="item-contact__row-info">
 							<p class="item-contact__row-big">Яковлева, 41а</p>
-							<a href="tel:+73822210915" class="item-contact__row-small">+7(3822)-210-915</a>
+							<a href="tel:+79009210915" class="item-contact__row-small">+7(900) 921-09-15</a>
 						</div>
 					</div>
 					<div class="item-contact__row">
 						<img src="{% static 'theme/mb/images/icon/phone-blue.svg' %}" alt="Иконка телефона" title="Иконка телефона">
 						<div class="item-contact__row-info">
 							<p class="item-contact__row-big">Демьяна Бедного, 16а ст1</p>
-							<a href="tel:+73822224018" class="item-contact__row-small">+7(3822)-224-018</a>
+							<a href="tel:+79039554018" class="item-contact__row-small">+7(903) 955-40-18</a>
 						</div>
 					</div>
 					<div class="item-contact__row" id="time-work">
@@ -92,14 +92,12 @@
 					</div>
 				</div>
 				<div class="contact__item item-contact">
-					<iframe
-						src="https://yandex.ru/map-widget/v1/?um=constructor%3A623b48d95dee10ff640872d957b3d9544f718b3a557b9f85cab68ec0aa000a74&amp;source=constructor"
-						width="100%" height="100%" frameborder="0"></iframe>
+					<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A75305f83b850436ebc3da0993be82eaef079bba8da91ecd1f39e5664653e0823&amp;source=constructor" width="100%" height="100%" frameborder="0"></iframe>
 				</div>
 			</div>
 		</div>
 	</div>
-	{% include "../includes/contact-block.html" %}
+	{% comment %} {% include "../includes/contact-block.html" %} {% endcomment %}
 </main>
 
 </body>
