--- a/#src/templates/theme/pages/gallery.html
+++ b/#src/templates/theme/pages/gallery.html
@@ -5,8 +5,7 @@
       <img src="{% static 'theme/mb/images/gallery.png' %}" alt="" class="hero__image" />
       <div class="hero__inner">
         <div class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
-          <a href="" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
-            class="breadcrumbs__item">
+          <a href="" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem" class="breadcrumbs__item">
             Главная
             <meta itemprop="position" content="1" />
           </a>
@@ -20,14 +19,12 @@
           из мрамора и гранита
         </h1>
         <p class="hero__subtitle">
-          На нашем сайте собран целый каталог фотографий памятников и надгробий изготовленных нашими мастерами. Вы
-          можете посмотреть примеры оформления памятников, надгробий,
-          мемориальных комплексов. Мы профессионально подходим к делу. Вы можете убедится в этом, посмотрев фотографии
-          наших работ.
+          На нашем сайте собран целый каталог фотографий памятников и надгробий изготовленных нашими мастерами. Вы можете посмотреть примеры оформления памятников, надгробий,
+          мемориальных комплексов. Мы профессионально подходим к делу. Вы можете убедится в этом, посмотрев фотографии наших работ.
         </p>
         <div class="hero__buttons">
           <a href="{% url 'category' %}" class="hero__button hero__button--blue">Посмотреть каталог</a>
-          <button type="button" class="hero__button hero__button--small">?</button>
+          <button type="button" class="hero__button hero__button--small" data-popup="consultation-form" data-order="Услуги">?</button>
         </div>
       </div>
     </div>
@@ -35,28 +32,26 @@
   <section class="gallery">
     <div class="gallery__container">
       <div class="gallery__inner">
+        {% comment %}
         <div class="gallery__category">
           {% if gallery_category %} {% for gal_cat in gallery_category %}
           <button type="button" data-id="{{ gal_cat.slug }}" class="gallery__category-link">{{ gal_cat.name }}</button>
           {% endfor %} {% endif %}
         </div>
+        {% endcomment %}
         <div class="gallery__content">
-          {% if gallery_category %} {% for gal_cat in gallery_category %}
           <div class="gallery__images" id="{{ gal_cat.slug }}">
             <h2 class="gallery__images-title">{{ gal_cat.name }}</h2>
             <div class="gallery__images-grid">
-              {% for image in gal_cat.categories.all %}
-              {% if image.category.slug == gal_cat.slug %}
+              {% for image in gallery %}
               <a href="{{ image.image.url }}" data-gall="{{ image.category.slug }}" class="gallery__image">
                 {% thumbnail image.image "368x350" format="WEBP" crop="center" as im %}
-                <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" />
+                <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ image.name }}" title="{{ image.name }}" />
                 {% endthumbnail %}
               </a>
-              {% endif %}
               {% endfor %}
             </div>
           </div>
-          {% endfor %} {% endif %}
         </div>
       </div>
     </div>
@@ -73,8 +68,7 @@
             </li>
             <li>
               <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
-              <p class="index-contact__list-text"><span>Поможем определиться </span>с типом памятника и заказать его
-                производство</p>
+              <p class="index-contact__list-text"><span>Поможем определиться </span>с типом памятника и заказать его производство</p>
             </li>
             <li>
               <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
@@ -124,8 +118,7 @@
                 <div class="form__agreement">
                   <input type="checkbox" name="agrement" id="id_agrement" checked />
                   <label for="id_agreement" class="form__label">
-                    Я даю свое согласие на обработку персональных данных и соглашаюсь с <a href="">политикой
-                      конфиденциальности</a>
+                    Я даю свое согласие на обработку персональных данных и соглашаюсь с <a href="">политикой конфиденциальности</a>
                   </label>
                 </div>
               </div>
