--- a/#src/templates/theme/pages/service/service.html
+++ b/#src/templates/theme/pages/service/service.html
@@ -3,7 +3,7 @@
 <main class="page service-page">
   <div class="hero">
     <div class="hero__container">
-      <img src="{% static 'theme/mb/images/service.png' %}" alt="" class="hero__image" />
+      <img src="{% static 'theme/mb/images/memorial_complex.png' %}" alt="" class="hero__image" />
       <div class="hero__inner">
         <div class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
           <a href="" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
@@ -17,7 +17,7 @@
           </span>
         </div>
         <h1 class="hero__title">
-          <span>Ритуальные улуги</span><br />
+          <span>Мемориальные улуги</span><br />
           компаниии Акрополь
         </h1>
         <p class="hero__subtitle">Благоустройство могил включает комплекс работ, направленных на создание
@@ -34,22 +34,18 @@
       <h2 class="service-page__title _title-h2">Наши услуги</h2>
       <div class="service-page__items">
         <a href="{% url 'service_new' %}" class="service-page__item"
-          style="background-image: url({% static 'theme/mb/images/texture.jpg' %})">
+          style="background-image: url({ %static 'theme/mb/images/texture.jpg' %})">
           <div class="service-page__icon">
             <img src="{% static 'theme/mb/images/serice-5.png' %}" alt="" />
           </div>
-          <p class="service-page__item-text">
-            Установка памятника
-          </p>
+          <p class="service-page__item-text">Установка памятника</p>
         </a>
         <a href="{% url 'service_grav' %}" class="service-page__item"
           style="background-image: url({% static 'theme/mb/images/texture.jpg' %})">
           <div class="service-page__icon">
             <img src="{% static 'theme/mb/images/serice-5.png' %}" alt="" />
           </div>
-          <p class="service-page__item-text">
-            Гравировка на памятнике
-          </p>
+          <p class="service-page__item-text">Гравировка на памятнике</p>
         </a>
       </div>
     </div>
@@ -60,23 +56,16 @@
         <div class="service-content__row">
           <div class="service-content__col">
             <div class="service-content__text _text">
-              <p>
-                Гранитная мастерская «Акрополь» предлагает услуги всех видов и типов благоустройства могил в
-                Томске.
+              <p>Гранитная мастерская «Акрополь» предлагает услуги всех видов и типов благоустройства могил в Томске.
               </p>
               <p>
-                Здесь выполняют облицовку гранитом и мрамором, укладку тротуарной плитки, брусчатки и
-                газона, засыпку мраморной крошки и щебёнки, установку столов и лавочек, изготовление по
-                индивидуальным эскизам, а также многое другое по желанию и фантазии клиента.
+                Здесь выполняют облицовку гранитом и мрамором, укладку тротуарной плитки, брусчатки и газона, засыпку
+                мраморной крошки и щебёнки, установку столов и лавочек,
+                изготовление по индивидуальным эскизам, а также многое другое по желанию и фантазии клиента.
               </p>
-              <p>
-                Все работы проводятся с использованием качественных материалов и профессионального
-                инструмента.
-              </p>
-              <p>
-                Для заказа услуг необходимо связаться с менеджером по телефону <a href="+73822224018">8 (3822)
-                  22-40-18</a>, <a href="tel:+73822210915">8 (3822) 210-915</a>
-              </p>
+              <p>Все работы проводятся с использованием качественных материалов и профессионального инструмента.</p>
+              <p>Для заказа услуг необходимо связаться с менеджером по телефону <a href="+73822224018">8 (3822)
+                  22-40-18</a>, <a href="tel:+73822210915">8 (3822) 210-915</a></p>
             </div>
             <a href="" class="service-content__btn _btn">Перейти в каталог</a>
           </div>
@@ -90,35 +79,27 @@
       <div class="service-advantge__grid">
         <div class="service-advantge__item">
           <div class="service-advantge__item-icon">
-            <img src="{% static 'theme/mb/images/icon-1.png' %}" alt="">
+            <img src="{% static 'theme/mb/images/icon-1.png' %}" alt="" />
           </div>
-          <p class="service-advantge__item-text">
-            Сделаем памятник по каталогу, так и индивидуальный заказ
-          </p>
+          <p class="service-advantge__item-text">Сделаем памятник по каталогу, так и индивидуальный заказ</p>
         </div>
         <div class="service-advantge__item">
           <div class="service-advantge__item-icon">
-            <img src="{% static 'theme/mb/images/icon-2.svg' %}" alt="">
+            <img src="{% static 'theme/mb/images/icon-2.svg' %}" alt="" />
           </div>
-          <p class="service-advantge__item-text">
-            Предоставим бесплтаное хранение памятника, до самовывоза
-          </p>
+          <p class="service-advantge__item-text">Предоставим бесплтаное хранение памятника, до самовывоза</p>
         </div>
         <div class="service-advantge__item">
           <div class="service-advantge__item-icon">
-            <img src="{% static 'theme/mb/images/icon-4.png' %}" alt="">
+            <img src="{% static 'theme/mb/images/icon-4.png' %}" alt="" />
           </div>
-          <p class="service-advantge__item-text">
-            Доставим памятник в любой город
-          </p>
+          <p class="service-advantge__item-text">Доставим памятник в любой город</p>
         </div>
         <div class="service-advantge__item">
           <div class="service-advantge__item-icon">
-            <img src="{% static 'theme/mb/images/icon-3.svg' %}" alt="">
+            <img src="{% static 'theme/mb/images/icon-3.svg' %}" alt="" />
           </div>
-          <p class="service-advantge__item-text">
-            Поможем с установкой, у нас есть собственные установщики
-          </p>
+          <p class="service-advantge__item-text">Поможем с установкой, у нас есть собственные установщики</p>
         </div>
       </div>
     </div>
