--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -506,6 +506,7 @@ html.lock body::before {
   font-weight: 600;
   width: 100%;
   height: 40px;
+  font-size: 13px;
   border-radius: 5px;
   display: flex;
   align-items: center;
@@ -2584,7 +2585,7 @@ body::after {
   display: grid;
   grid-template-columns: 1fr 1fr 40%;
   gap: 20px;
-  margin-top: 60px;
+  margin: 60px 0px;
 }
 
 .item-contact {
