--- a/main/core/theme/mb/templates/includes/contact-block.html
+++ b/main/core/theme/mb/templates/includes/contact-block.html
@@ -11,7 +11,8 @@
           </li>
           <li>
             <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
-            <p class="index-contact__list-text"><span>Поможем определиться </span>с типом памятника и заказать его производство</p>
+            <p class="index-contact__list-text"><span>Поможем определиться </span>с типом памятника и заказать его
+              производство</p>
           </li>
           <li>
             <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
@@ -29,10 +30,12 @@
             Мы обязательно поможем!
           </p>
           <div class="index-contact__mobile-phones">
-            <a href="">+7(3822)-210-915<img src="{% static 'theme/mb/images/icon/phone-black.svg' %}" alt="" /></a>
-            <a href="">+7-900-921-09-15<img src="{% static 'theme/mb/images/icon/phone-mobile.svg' %}" alt="" /></a>
+            <a href="tel:+79009210915">+7(900) 921-09-15<img src="{% static 'theme/mb/images/icon/phone-black.svg' %}"
+                alt="" /></a>
+            <a href="tel:+79039554018">+7(903) 955-40-18<img src="{% static 'theme/mb/images/icon/phone-mobile.svg' %}"
+                alt="" /></a>
           </div>
-          <a href="tel:8999999999" class="index-contact__call _btn">Позвонить</a>
+          <a href="tel:+79039554018" class="index-contact__call _btn">Позвонить</a>
         </div>
       </div>
       <div class="index-contact__item">
@@ -43,6 +46,7 @@
           <div class="form__inner">
             <input type="text" name="name" id="id_name" class="form__controls" placeholder="Ваше имя" />
             <input type="tel" name="phone" id="id_phone" class="form__controls" placeholder="Номер телефона" />
+            <p class="form__social-label">Выберете способ связи:</p>
             <div class="form__social-inner">
               <label for="ph" class="form__controls-label">
                 <input type="radio" id="ph" name="social" value="Позвонить по телефону" checked />
@@ -66,7 +70,8 @@
               <div class="form__agreement">
                 <input type="checkbox" name="agrement" id="id_agrement" checked />
                 <label for="id_agreement" class="form__label">
-                  Я даю свое согласие на обработку персональных данных и соглашаюсь с <a href="">политикой конфиденциальности</a>
+                  Я даю свое согласие на обработку персональных данных и соглашаюсь с <a href="">политикой
+                    конфиденциальности</a>
                 </label>
               </div>
             </div>
