--- a/main/core/admin/templates/gallery/gallery_category_edit.html
+++ b/main/core/admin/templates/gallery/gallery_category_edit.html
@@ -23,6 +23,14 @@
               <label for="{{ form.slug.id_for_label }}" class="form__controls-label">SLUG :</label>
               {{ form.slug }} {{ form.slug.errors }}
             </div>
+            <div class="form__group">
+              <label for="{{ form.home_view.id_for_label }}" class="form__controls-label">Отображать на главной :</label>
+              {{ form.home_view }} {{ form.home_view.errors }}
+            </div>
+            <div class="form__group">
+              <label for="{{ form.image.id_for_label }}" class="form__controls-label">Картинка :</label>
+              {{ form.image }} {{ form.image.errors }}
+            </div>
           </div>
         </div>
       </div>
