--- a/main/core/theme/mb/templates/pages/contact.html
+++ b/main/core/theme/mb/templates/pages/contact.html
@@ -69,25 +69,25 @@
 					<div class="item-contact__row">
 						<div class="item-contact__row-info">
 							<p class="item-contact__row-big">Юридическое название:</p>
-							<p class="item-contact__row-small">Акрополь</p>
+							<p class="item-contact__row-small">ООО "Акрополь"</p>
 						</div>
 					</div>
 					<div class="item-contact__row">
 						<div class="item-contact__row-info">
 							<p class="item-contact__row-big">ИНН:</p>
-							<p class="item-contact__row-small">7813661352</p>
+							<p class="item-contact__row-small">7000002402</p>
 						</div>
 					</div>
 					<div class="item-contact__row">
 						<div class="item-contact__row-info">
 							<p class="item-contact__row-big">КПП:</p>
-							<p class="item-contact__row-small">7806011231</p>
+							<p class="item-contact__row-small">700001001</p>
 						</div>
 					</div>
 					<div class="item-contact__row">
 						<div class="item-contact__row-info">
 							<p class="item-contact__row-big">ОГРН:</p>
-							<p class="item-contact__row-small">1227800031231</p>
+							<p class="item-contact__row-small">1227000009785</p>
 						</div>
 					</div>
 				</div>
