--- a/main/core/theme/mb/templates/pages/index.html
+++ b/main/core/theme/mb/templates/pages/index.html
@@ -59,7 +59,7 @@
       <div class="index-stock__grid">
         <a href="{% url 'stock_product' %}" class="index-stock__item index-stock__item--first">
           <img src="{% static 'theme/mb/images/arki.jpg' %}" alt="" class="index-stock__item-img" />
-          <h2 class="index-stock__item-title">Товары со <br />скидкой</h2>
+          <h2 class="index-stock__item-title">Памятники со <br />скидкой</h2>
           <p class="index-stock__item-discount"></p>
         </a>
         {% if category_gallery %}
