--- a/main/core/theme/mb/templates/components/footer.html
+++ b/main/core/theme/mb/templates/components/footer.html
@@ -57,5 +57,8 @@
         </div>
       </div>
     </div>
+    <div class="footer__author">
+      <a href="https://xn----7sbah6bllcobpj.xn--p1ai/" target="_blank">Сайт разработан - РА Аврора</a>
+    </div>
   </div>
 </footer>
