--- a/#src/templates/theme/components/footer.html
+++ b/#src/templates/theme/components/footer.html
@@ -42,8 +42,13 @@
             <p class="footer__contact-address">Демьяна Бедного, 16а ст1</p>
           </div>
           <div class="footer__contact-list">
+            <p class="footer__contact-city">г.Новосибирск</p>
+            <p class="footer__contact-address">Мичурина, 24</p>
+            <a href="tel:+79025672451">+7(902) 567-24-51</a>
+          </div>
+          <div class="footer__contact-list">
             <p class="footer__contact-city">Время работы:</p>
-            <p class="footer__contact-address">Пн-Вт: 09:00-18:00</p>
+            <p class="footer__contact-address">Пн-Пт: 09:00-18:00</p>
             <p class="footer__contact-address">Сб-Вс: 10:00-17:00</p>
           </div>
           <div class="footer__contact-list">
@@ -51,6 +56,9 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="footer__author">
+      <a href="https://xn----7sbah6bllcobpj.xn--p1ai/" target="_blank">Сайт разработан - РА Аврора</a>
     </div>
   </div>
 </footer>
