--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -691,6 +691,52 @@
       object-fit: cover;
     }
   }
+
+  // .index-work__slider
+
+  &__slider {
+    position: relative;
+  }
+
+  // .index-work__wrapper
+
+  &__wrapper {}
+
+  // .index-work__slide
+
+  &__slide {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-height: 400px;
+    overflow: hidden;
+    border-radius: 10px;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  // .index-work__next
+  // .index-work__prev
+  &__next,
+  &__prev {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    background-color: rgba($color: $accent, $alpha: 1.0);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &::after {
+      font-size: 14px;
+      color: rgba($color: $white, $alpha: 1.0);
+    }
+  }
+
 }
 
 
@@ -1400,4 +1446,85 @@
     justify-content: center;
   }
 
+}
+
+.login {
+  height: 100vh;
+  background-color: rgba($color: $white, $alpha: 1.0);
+
+  // .login__container
+
+  &__container {
+    height: 100vh;
+  }
+
+  // .login__inner
+
+  &__inner {
+    display: flex;
+
+  }
+
+  // .login__sidebar
+
+  &__sidebar {
+    width: 580px;
+    padding: 0px 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    ._title-h2 {
+      font-size: 35px;
+      font-weight: 600;
+      margin-bottom: 40px;
+      text-align: center;
+    }
+  }
+
+  // .login__images
+
+  &__images {
+    height: 100vh;
+    width: 100%;
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  .form {
+    display: grid;
+    gap: 20px;
+
+
+    // .form__group
+    &__group {
+      display: grid;
+      gap: 10px;
+    }
+
+    // .form__label
+    &__label {}
+
+    // .form__controls
+    &__controls {
+      box-shadow: none;
+      width: 100%;
+      height: 50px;
+    }
+
+    // .form__submit
+    &__submit {
+      background-color: rgba($color: $accent, $alpha: 1.0);
+      width: 100%;
+      height: 50px;
+      color: rgba($color: $white, $alpha: 1.0);
+      border-radius: 5px;
+      padding: 0px;
+    }
+  }
+
+  .login__images {}
 }
