--- a/#src/scss/pages/users/login.scss
+++ b/#src/scss/pages/users/login.scss
@@ -1,40 +1,40 @@
-.login {
-  margin: 0px 10px;
+// .login {
+//   margin: 0px 10px;
 
-  // .login__container
+//   // .login__container
 
-  &__container {}
+//   &__container {}
 
-  // .login__inner
+//   // .login__inner
 
-  &__inner {
-    max-width: 800px;
-    margin: 0 auto;
-    background-color: rgba($color: $white, $alpha: 1.0);
-    box-shadow: 0 20px 60px 2px rgba(149, 144, 135, 0.15);
-    padding: 30px;
-    border-radius: 46px;
-  }
+//   &__inner {
+//     max-width: 800px;
+//     margin: 0 auto;
+//     background-color: rgba($color: $white, $alpha: 1.0);
+//     box-shadow: 0 20px 60px 2px rgba(149, 144, 135, 0.15);
+//     padding: 30px;
+//     border-radius: 46px;
+//   }
 
-  // .login__reset
+//   // .login__reset
 
-  &__reset {
-    display: flex;
-    gap: 20px;
-    justify-content: flex-end;
-    margin-top: 40px;
-  }
+//   &__reset {
+//     display: flex;
+//     gap: 20px;
+//     justify-content: flex-end;
+//     margin-top: 40px;
+//   }
 
-  // .login__link
+//   // .login__link
 
-  &__link {
-    &:hover {
-      color: #d71635;
-    }
-  }
+//   &__link {
+//     &:hover {
+//       color: #d71635;
+//     }
+//   }
 
-  ._title-h2 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-}
+//   ._title-h2 {
+//     text-align: center;
+//     margin-bottom: 20px;
+//   }
+// }
