--- a/main/core/theme/mb/templates/base.html
+++ b/main/core/theme/mb/templates/base.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="{% static 'theme/mb/css/main.css' %}" />
   <link rel="stylesheet" href="{% static 'libs/venobox.min.css' %}" />
   <link rel="shortcut icon" href="{% static 'theme/mb/images/favicon.ico' %}" />
-  <!-- <meta name="robots" content="noindex, nofollow"> -->
+  <meta name="robots" content="all">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet" />
