--- a/#src/templates/theme/base.html
+++ b/#src/templates/theme/base.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css?_v=20240126172157" />
   <meta name="yandex-verification" content="28b257e33ea51829" />
+  <meta name="google-site-verification" content="GitkBtONzSCxu89G5rcjMR3_zjyAd_hZFifoyu076HU" />
 </head>
 
 <body>
